# rust-kafka-config

./: Cargo.toml  README.md
src/: consumer.rs  producer.rs
